--- a/src/Hyper-V-Tray/Hyper-V-Tray.csproj
+++ b/src/Hyper-V-Tray/Hyper-V-Tray.csproj
@@ -27,11 +27,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+		<PackageReference Include="NetEx.Legacy.WinForms" Version="0.0.2" />
 		<PackageReference Include="System.Management" Version="9.0.4" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\..\..\System.Windows.Forms.Legacy\src\System.Windows.Forms.Legacy\System.Windows.Forms.Legacy.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
