--- a/src/Hyper-V Tray/Hyper-V Tray.csproj
+++ b/src/Hyper-V Tray/Hyper-V Tray.csproj
@@ -10,7 +10,7 @@
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 		<PublishSingleFile>true</PublishSingleFile>
 		<Platforms>x64</Platforms>
-		<ApplicationIcon>..\..\assets\icons\HyperV.ico</ApplicationIcon>
+		<ApplicationIcon>Resources\Icons\HyperV.ico</ApplicationIcon>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 		<Title>Hyper-V Tray</Title>
@@ -22,9 +22,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
-		<PackageReference Include="NetEx.Legacy.WinForms" Version="0.0.2" />
-		<PackageReference Include="System.Management" Version="9.0.4" />
+		<None Remove="Resources\Icons\**\*" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Include="Resources\Icons\**\*" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -58,6 +60,12 @@
 		  <Generator>ResXFileCodeGenerator</Generator>
 		  <LastGenOutput>Strings.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
+		<PackageReference Include="NetEx.Legacy.WinForms" Version="0.0.2" />
+		<PackageReference Include="System.Management" Version="9.0.4" />
 	</ItemGroup>
 
 </Project>
