Project output type correction.

--- a/src/Hyper-V Tray/Hyper-V Tray.csproj
+++ b/src/Hyper-V Tray/Hyper-V Tray.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0-windows7.0</TargetFramework>
-		<OutputType>Exe</OutputType>
+		<OutputType>WinExe</OutputType>
 		<RootNamespace>HyperVTray</RootNamespace>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<UseWindowsForms>true</UseWindowsForms>
@@ -31,9 +31,9 @@
 
 	<ItemGroup>
 		<Compile Update="Resources\Icons.Designer.cs">
-		  <DesignTime>True</DesignTime>
-		  <AutoGen>True</AutoGen>
-		  <DependentUpon>Icons.resx</DependentUpon>
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Icons.resx</DependentUpon>
 		</Compile>
 		<Compile Update="Resources\StringsFallback.Designer.cs">
 			<DesignTime>True</DesignTime>
@@ -41,24 +41,24 @@
 			<DependentUpon>StringsFallback.resx</DependentUpon>
 		</Compile>
 		<Compile Update="Resources\Strings.Designer.cs">
-		  <DesignTime>True</DesignTime>
-		  <AutoGen>True</AutoGen>
-		  <DependentUpon>Strings.resx</DependentUpon>
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Strings.resx</DependentUpon>
 		</Compile>
 	</ItemGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Update="Resources\Icons.resx">
-		  <Generator>ResXFileCodeGenerator</Generator>
-		  <LastGenOutput>Icons.Designer.cs</LastGenOutput>
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Icons.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 		<EmbeddedResource Update="Resources\StringsFallback.resx">
 			<Generator>ResXFileCodeGenerator</Generator>
 			<LastGenOutput>StringsFallback.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 		<EmbeddedResource Update="Resources\Strings.resx">
-		  <Generator>ResXFileCodeGenerator</Generator>
-		  <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Strings.Designer.cs</LastGenOutput>
 		</EmbeddedResource>
 	</ItemGroup>
 
