--- a/src/Hyper-V Tray/Hyper-V Tray.csproj
+++ b/src/Hyper-V Tray/Hyper-V Tray.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net9.0-windows7.0</TargetFramework>
 		<OutputType>WinExe</OutputType>
 		<RootNamespace>HyperVTray</RootNamespace>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<UseWindowsForms>true</UseWindowsForms>
 		<nullable>enable</nullable>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
