--- a/src/Hyper-V Tray/Hyper-V Tray.csproj
+++ b/src/Hyper-V Tray/Hyper-V Tray.csproj
@@ -75,7 +75,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="NetEx.Legacy.WinForms" Version="0.0.3" />
+		<PackageReference Include="System.DirectoryServices.AccountManagement" Version="9.0.8" />
 		<PackageReference Include="System.Management" Version="9.0.8" />
+		<PackageReference Include="System.ServiceProcess.ServiceController" Version="9.0.8" />
 	</ItemGroup>
 
 </Project>
